--- a/cryptify/pubspec.yaml
+++ b/cryptify/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^1.4.3
   http: ^0.13.5
   persistent_bottom_nav_bar: ^5.0.2
+  flutter_bounce: ^1.1.0
   
 
 dev_dependencies:
