--- a/cryptify/pubspec.yaml
+++ b/cryptify/pubspec.yaml
@@ -39,11 +39,15 @@ dependencies:
   http: ^0.13.5
   persistent_bottom_nav_bar: ^5.0.2
   flutter_bounce: ^1.1.0
+  flutter_spinkit: ^5.1.0
+
+
   
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+    sdk: flutter  
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
